# Rehab-AI-RK3588

./: .gitignore  CMakeLists.txt  deploy.ps1
board/: .gitignore  Makefile  README.md  convert_yolov8_pose.py  link.bat  link.rsp  link_err.txt  test_dims.cc  test_rknn.cc  test_rknn2.cc
board/assets/: rehab.desktop
board/include/: common.h  file_utils.h  image_utils.h  postprocess.h  ui.h  xf86drm.h  xf86drmMode.h
board/scripts/: install.sh  launch.sh
board/src/: file_utils.c  image_utils.c  main_board.cc  postprocess.cc  ui.cpp  yolov8-pose.cc
board/tests/: test_drm32.c  test_drm_color.c
include/: app_config.h  audio_engine.h  cv_pipeline.h  llm_pipeline.h
scripts/: build_board.sh
src/: audio_engine.cpp  cv_pipeline.cpp  llm_pipeline.cpp  main.cpp
test/: test_init.cpp
